add a CPD target to ant

--- a/build.properties
+++ b/build.properties
@@ -82,6 +82,8 @@ doc.skip=false
 
 # Run findbugs
 findbugs.skip=false
+pmd.skip=false
+cpd.skip=false
 
 ################################################################################
 ## misc options
