--- a/build.properties
+++ b/build.properties
@@ -61,7 +61,7 @@ gjs.lib.jars = null
 findbugs.dir = findbugs
 findbugs.path = ${findbugs.dir}/lib/findbugs-ant.jar
 
-pmd.dir = pmd
+pmd.dir =
 ################################################################################
 ## build tool options
 
