Output jUnit XML results if test.xml_output is set

--- a/build.properties
+++ b/build.properties
@@ -73,6 +73,7 @@ test.skip=false
 test.verbose=false
 test.benchmark=false
 test.extensive=false
+test.xml_output=false
 
 # select a single test to run
 #test.class=
