--- a/build.properties
+++ b/build.properties
@@ -74,6 +74,7 @@ test.verbose=false
 test.benchmark=false
 test.extensive=false
 test.xml_output=false
+test.haltonfailure=yes
 
 # select a single test to run
 #test.class=
