Enable test.xml_output=true by default, configure the output directory properly

--- a/build.properties
+++ b/build.properties
@@ -73,7 +73,7 @@ test.skip=false
 test.verbose=false
 test.benchmark=false
 test.extensive=false
-test.xml_output=false
+test.xml_output=true
 test.haltonfailure=yes
 
 # select a single test to run
