--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/freenet/freenet-ext.jar" sourcepath="/Contrib/db4o/src/db4oj"/>
 	<classpathentry kind="lib" path="lib/bcprov.jar"/>
-	<classpathentry kind="output" path="build"/>
+	<classpathentry kind="output" path="build/main/"/>
 </classpath>
