Update only for unix. Mac has separate binaries, which we have not included so far. Also it has issues with ppc.

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -44,7 +44,7 @@ wrapper-jar-win.sha256=08f7abb7b6ef78f24607b13e5c81a6e4394966a38c6f1cc316ed6fca9
 wrapper-jar-win.key=CHK@ZJLfvpPH1ARDsoU3sU6V4gUnzJydAaDmfHcC4GhiJCQ,REH4SD6PEyxAY-tmi0n6NRrCz~yha56qOBtnzBqP2LY,AAMC--8/wrapper.jar
 wrapper-jar-win.order=-2
 wrapper-jar-win.os=ALL_WINDOWS
-wrapper-update-unix.os=ALL_UNIX,ALL_MAC
+wrapper-update-unix.os=ALL_UNIX
 wrapper-update-unix.type=OPTIONAL_ATOMIC_MULTI_FILES_WITH_RESTART
 wrapper-update-unix.files.wrapperjar.filename=wrapper.jar
 wrapper-update-unix.files.wrapperjar.key=CHK@khpPKm16UjHtCAuiYFf7S8AR-pXLqo60ZNerPcLVFcU,VF75PhVxwJWoAyD48QJeO1CypJGfoliMVaO4egzFzZ8,AAMC--8/wrapper.jar
