Only update wrapper on arch's we have binaries for.

--- a/dependencies.properties
+++ b/dependencies.properties
@@ -46,6 +46,7 @@ wrapper-jar-win.order=-2
 wrapper-jar-win.os=ALL_WINDOWS
 wrapper-update-unix.os=ALL_UNIX
 wrapper-update-unix.type=OPTIONAL_ATOMIC_MULTI_FILES_WITH_RESTART
+wrapper-update-unix.arch=x86,x86_64,ppc_32,ppc_64,ia64
 wrapper-update-unix.files.wrapperjar.filename=wrapper.jar
 wrapper-update-unix.files.wrapperjar.key=CHK@khpPKm16UjHtCAuiYFf7S8AR-pXLqo60ZNerPcLVFcU,VF75PhVxwJWoAyD48QJeO1CypJGfoliMVaO4egzFzZ8,AAMC--8/wrapper.jar
 wrapper-update-unix.files.wrapperjar.size=119512
