--- a/dependencies.properties
+++ b/dependencies.properties
@@ -47,6 +47,7 @@ wrapper-jar-win.os=ALL_WINDOWS
 wrapper-update-unix.os=ALL_UNIX
 wrapper-update-unix.type=OPTIONAL_ATOMIC_MULTI_FILES_WITH_RESTART
 wrapper-update-unix.arch=x86,x86_64,ppc_32,ppc_64,ia64
+wrapper-update-unix.mustBeOnPathNotAScript=java
 wrapper-update-unix.files.wrapperjar.filename=wrapper.jar
 wrapper-update-unix.files.wrapperjar.key=CHK@khpPKm16UjHtCAuiYFf7S8AR-pXLqo60ZNerPcLVFcU,VF75PhVxwJWoAyD48QJeO1CypJGfoliMVaO4egzFzZ8,AAMC--8/wrapper.jar
 wrapper-update-unix.files.wrapperjar.size=119512
@@ -107,6 +108,7 @@ wrapper-update-unix.files.libwrapper-linux-ppc-64.sha256=de7c475e3499400049c05a3
 wrapper-update-mac.type=OPTIONAL_ATOMIC_MULTI_FILES_WITH_RESTART
 wrapper-update-mac.os=ALL_MAC
 wrapper-update-mac.arch=x86,x86_64
+wrapper-update-mac.mustBeOnPathNotAScript=java
 wrapper-update-mac.files.wrapperjar.filename=wrapper.jar
 wrapper-update-mac.files.wrapperjar.key=CHK@khpPKm16UjHtCAuiYFf7S8AR-pXLqo60ZNerPcLVFcU,VF75PhVxwJWoAyD48QJeO1CypJGfoliMVaO4egzFzZ8,AAMC--8/wrapper.jar
 wrapper-update-mac.files.wrapperjar.size=119512
